# Eightfold-Assingment

./: README.md  main.py  pyproject.toml
candidate_transformer/: __init__.py  cli.py  confidence.py  merge.py  models.py  normalizers.py  pipeline.py  projection.py
candidate_transformer/configs/: skills.json
candidate_transformer/parsers/: base.py  csv_parser.py  resume_pdf_parser.py
docs/: technical_design.md
multi_source_candidate_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
output/: custom_output.json  default_output.json  malformed_csv_output.json  projection_error_output.json
samples/: config_custom.json  config_missing_error.json  malformed.csv  recruiter_sample.csv
scripts/: create_design_pdf.py  create_sample_resume_pdf.py
tests/: test_invalid_inputs.py  test_merge.py  test_normalizers.py  test_projection.py
